--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@openzeppelin/contracts": "4.4.1",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "truffle": "^5.4.26"
